apps/internal/trilium/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: trilium-svc
  namespace: svc-trilium
  labels: { app: trilium }
spec:
  type: ClusterIP
  selector: { app: trilium }
  ports:
    - name: http
      port: 80
      targetPort: http
