apps/internal/trilium/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: trilium
  namespace: svc-trilium
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-dns"
spec:
  ingressClassName: nginx-internal
  rules:
    - host: trilium.intern.rohrbom.be
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: trilium-svc
                port:
                  number: 80
  tls:
    - hosts: [trilium.intern.rohrbom.be]
      secretName: trilium-tls
